--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+#configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/bookstore
+spring.datasource.username=muradov
+spring.datasource.password=password123
 
+spring.datasource.drive-class-name=com.mysql.cj.jdbc.Driver
